--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Blog App",
-  "name": "Blog App",
+  "short_name": "Spinner Wheel",
+  "name": "Spinner Wheel",
   "icons": [
     {
       "src": "playstore.png",
